--- a/internal/horizon/getters/getter.tmpl
+++ b/internal/horizon/getters/getter.tmpl
@@ -2,87 +2,88 @@ package getters
 
 
 import (
-	"github.com/tokend/stellar-deposit-svc/internal/horizon/page"
-    "github.com/tokend/stellar-deposit-svc/internal/horizon/query"
+	"github.com/tokend/stellar-withdraw-svc/internal/horizon/page"
+    "github.com/tokend/stellar-withdraw-svc/internal/horizon/query"
     "gitlab.com/distributed_lab/logan"
     "gitlab.com/distributed_lab/logan/v3/errors"
     regources "gitlab.com/tokend/regources/generated"
 )
 
-type TemplatePager interface {
+type ResourcePager interface {
     Next() (*regources.TemplateListResponse, error)
     Prev() (*regources.TemplateListResponse, error)
     Self() (*regources.TemplateListResponse, error)
+    First() (*regources.TemplateListResponse, error)
 }
 
-type TemplateGetter interface {
-    SetFilters(filters query.TemplateFilters)
-    SetIncludes(includes query.TemplateIncludes)
+type ResourceGetter interface {
+    SetFilters(filters query.ResourceFilters)
+    SetIncludes(includes query.ResourceIncludes)
     SetPageParams(pageParams page.Params)
-    SetParams(params query.TemplateParams)
+    SetParams(params query.ResourceParams)
 
-    Filter() query.TemplateFilters
-    Include() query.TemplateIncludes
+    Filter() query.ResourceFilters
+    Include() query.ResourceIncludes
     Page() page.Params
 
     ByID(ID string) (*regources.TemplateResponse, error)
     List() (*regources.TemplateListResponse, error)
 }
 
-type TemplateHandler interface {
-    TemplateGetter
-    TemplatePager
+type ResourceHandler interface {
+    ResourceGetter
+    ResourcePager
 }
 
-type defaultTemplateHandler struct {
+type defaultResourceHandler struct {
 	base Getter
-	params query.TemplateParams
+	params query.ResourceParams
 
 	currentPageLinks *regources.Links
 }
 
-func NewDefaultTemplateHandler(c *client.Client) *defaultTemplateHandler {
-	return &defaultTemplateHandler{
+func NewDefaultResourceHandler(c *client.Client) *defaultResourceHandler {
+	return &defaultResourceHandler{
 		base: New(c),
 	}
 }
 
 
-func (g *defaultTemplateHandler) SetFilters(filters query.TemplateFilters) {
+func (g *defaultResourceHandler) SetFilters(filters query.ResourceFilters) {
     g.params.Filters = filters
 }
 
-func (g *defaultTemplateHandler) SetIncludes(includes query.TemplateIncludes) {
+func (g *defaultResourceHandler) SetIncludes(includes query.ResourceIncludes) {
     g.params.Includes = includes
 }
 
-func (g *defaultTemplateHandler) SetPageParams(pageParams page.Params) {
+func (g *defaultResourceHandler) SetPageParams(pageParams page.Params) {
     g.params.PageParams = pageParams
 }
 
-func (g *defaultTemplateHandler) SetParams(params query.TemplateParams) {
+func (g *defaultResourceHandler) SetParams(params query.ResourceParams) {
     g.params = params
 }
 
-func (g *defaultTemplateHandler) Params() query.TemplateParams{
+func (g *defaultResourceHandler) Params() query.ResourceParams{
     return g.params
 }
 
-func (g *defaultTemplateHandler) Filter() query.TemplateFilters{
+func (g *defaultResourceHandler) Filter() query.ResourceFilters{
     return g.params.Filters
 }
 
-func (g *defaultTemplateHandler) Include() query.TemplateIncludes{
+func (g *defaultResourceHandler) Include() query.ResourceIncludes{
     return g.params.Includes
 }
 
-func (g *defaultTemplateHandler) Page() page.Params{
+func (g *defaultResourceHandler) Page() page.Params{
     return g.params.PageParams
 }
 
-func (g *defaultTemplateHandler) ByID(ID string) (*regources.TemplateResponse, error) {
+func (g *defaultResourceHandler) ByID(ID string) (*regources.TemplateResponse, error) {
 	result := &regources.TemplateResponse{}
-	err := g.base.GetPage(query.TemplateByID(ID), g.params, result)
+	err := g.base.GetPage(query.ResourceByID(ID), g.params, result)
 	if err != nil {
 		return nil, errors.Wrap(err, "failed to get record by id", logan.F{
 			"id": ID,
@@ -91,9 +92,9 @@ func (g *defaultTemplateHandler) ByID(ID string) (*regources.TemplateResponse, e
 	return result, nil
 }
 
-func (g *defaultTemplateHandler) List() (*regources.TemplateListResponse, error) {
+func (g *defaultResourceHandler) List() (*regources.TemplateListResponse, error) {
 	result := &regources.TemplateListResponse{}
-	err := g.base.GetPage(query.TemplateList(), g.params, result)
+	err := g.base.GetPage(query.ResourceList(), g.params, result)
 	if err != nil {
 		return nil, errors.Wrap(err, "failed to get records list", logan.F{
 			"query_params": g.params,
@@ -103,12 +104,14 @@ func (g *defaultTemplateHandler) List() (*regources.TemplateListResponse, error)
 	return result, nil
 }
 
-func (g *defaultTemplateHandler) Next() (*regources.TemplateListResponse, error){
+func (g *defaultResourceHandler) Next() (*regources.TemplateListResponse, error){
 	if g.currentPageLinks == nil{
 		return nil, errors.New("Empty links")
 	}
 	if g.currentPageLinks.Next == "" {
-	    return nil, nil
+        return nil, errors.From(errors.New("No link to page"), logan.F{
+            "page": "next",
+        })
 	}
 	result := &regources.TemplateListResponse{}
 	err := g.base.PageFromLink(g.currentPageLinks.Next, result)
@@ -121,12 +124,14 @@ func (g *defaultTemplateHandler) Next() (*regources.TemplateListResponse, error)
 	return result, nil
 }
 
-func (g *defaultTemplateHandler) Prev() (*regources.TemplateListResponse, error){
+func (g *defaultResourceHandler) Prev() (*regources.TemplateListResponse, error){
 	if g.currentPageLinks == nil{
 		return nil, errors.New("Empty links")
 	}
 	if g.currentPageLinks.Prev == "" {
-    	    return nil, nil
+        return nil, errors.From(errors.New("No link to page"), logan.F{
+            "page": "prev",
+        })
     }
 
 	result := &regources.TemplateListResponse{}
@@ -140,12 +145,34 @@ func (g *defaultTemplateHandler) Prev() (*regources.TemplateListResponse, error)
 	return result, nil
 }
 
-func (g *defaultTemplateHandler) Self() (*regources.TemplateListResponse, error){
+func (g *defaultResourceHandler) Self() (*regources.TemplateListResponse, error){
 	if g.currentPageLinks == nil{
 		return nil, errors.New("Empty links")
 	}
 	if g.currentPageLinks.Self == "" {
-    	    return nil, nil
+        return nil, errors.From(errors.New("No link to page"), logan.F{
+            "page": "self",
+        })
+    }
+	result := &regources.TemplateListResponse{}
+	err := g.base.PageFromLink(g.currentPageLinks.Self, result)
+	if err != nil {
+		return nil, errors.Wrap(err, "failed to get next page", logan.F{
+			"link": g.currentPageLinks.Next,
+		})
+	}
+
+	return result, nil
+}
+
+func (g *defaultResourceHandler) First() (*regources.TemplateListResponse, error){
+	if g.currentPageLinks == nil{
+		return nil, errors.New("Empty links")
+	}
+	if g.currentPageLinks.First == "" {
+        return nil, errors.From(errors.New("No link to page"), logan.F{
+            "page": "first",
+        })
     }
 	result := &regources.TemplateListResponse{}
 	err := g.base.PageFromLink(g.currentPageLinks.Self, result)
