Dependencies update & just in case check

--- a/internal/horizon/getters/getter.tmpl
+++ b/internal/horizon/getters/getter.tmpl
@@ -100,7 +100,9 @@ func (g *defaultResourceHandler) List() (*regources.TemplateListResponse, error)
 			"query_params": g.params,
 		})
 	}
-    g.currentPageLinks = result.Links
+    if result.Links != nil {
+        g.currentPageLinks = result.Links
+    }
 	return result, nil
 }
 
@@ -120,7 +122,9 @@ func (g *defaultResourceHandler) Next() (*regources.TemplateListResponse, error)
 			"link": g.currentPageLinks.Next,
 		})
 	}
-    g.currentPageLinks = result.Links
+    if result.Links != nil {
+        g.currentPageLinks = result.Links
+    }
 
 	return result, nil
 }
@@ -142,7 +146,10 @@ func (g *defaultResourceHandler) Prev() (*regources.TemplateListResponse, error)
 			"link": g.currentPageLinks.Prev,
 		})
 	}
-	g.currentPageLinks = result.Links
+	if result.Links != nil {
+	    g.currentPageLinks = result.Links
+	}
+
 
 	return result, nil
 }
@@ -163,7 +170,9 @@ func (g *defaultResourceHandler) Self() (*regources.TemplateListResponse, error)
 			"link": g.currentPageLinks.Self,
 		})
 	}
-	g.currentPageLinks = result.Links
+	if result.Links != nil {
+	    g.currentPageLinks = result.Links
+	}
 
 	return result, nil
 }
@@ -184,7 +193,9 @@ func (g *defaultResourceHandler) First() (*regources.TemplateListResponse, error
 			"link": g.currentPageLinks.First,
 		})
 	}
-	g.currentPageLinks = result.Links
+	if result.Links != nil {
+	    g.currentPageLinks = result.Links
+	}
 
 	return result, nil
 }
